# xade

./: CMakeLists.txt
bg/: CMakeLists.txt  main.cc
im/: CMakeLists.txt  basic_dictionary.cc  basic_dictionary.h  engine.cc  engine.h  main.cc
include/xade/: client.h  converter.h  layered.h  owner.h  skia.h
vt/: CMakeLists.txt  buffer.h  main.cc  terminal.h  theme.cc  theme.h  window.cc  window.h
wm/: CMakeLists.txt  main.cc
xade/: CMakeLists.txt  client.cc  layered.cc  skia.cc
xemmai/: CMakeLists.txt  client.cc  client.h  layered.cc  layered.h  xade.cc  xade.h
